force-app/main/default/objects/ER_Loop__c/ER_Loop__c.object-meta.xml
<CustomObject>
    <label>Loop</label>
    <nameField>
        <label>Loop Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loops</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>