force-app/main/default/objects/ER_Loop__c/fields/AT_Description__c.field-meta.xml
<CustomField>
    <fullName>AT_Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>