force-app/main/default/objects/ER_Loop__c/fields/ER_Reference__c.field-meta.xml
<CustomField>
    <fullName>ER_Reference__c</fullName>
    <externalId>true</externalId>
    <label>Reference</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>