force-app/main/default/objects/ER_Loop__c/fields/ERAT_StatusChangedBy__c.field-meta.xml
<CustomField>
    <fullName>ERAT_StatusChangedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Status Changed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Loops</relationshipName>
    <type>Lookup</type>
</CustomField>