force-app/main/default/objects/ER_Loop__c/fields/Export_to_PPS_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Export_to_PPS_Timestamp__c</fullName>
    <label>Export to PPS Timestamp</label>
    <type>DateTime</type>
</CustomField>