force-app/main/default/objects/ER_Loop__c/fields/Number_of_exported_MIDs__c.field-meta.xml
<CustomField>
    <fullName>Number_of_exported_MIDs__c</fullName>
    <label>Number of exported MIDs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>