force-app/main/default/objects/ER_Loop__c/fields/Transfer_to_PPS_Response__c.field-meta.xml
<CustomField>
    <fullName>Transfer_to_PPS_Response__c</fullName>
    <label>Transfer to PPS Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>