force-app/main/default/objects/ER_Loop__c/fields/Transfer_to_PPS_Status__c.field-meta.xml
<CustomField>
    <fullName>Transfer_to_PPS_Status__c</fullName>
    <label>Transfer to PPS Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>