force-app/main/default/objects/ER_Loop__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ER_Reference__c</columns>
    <columns>AT_Description__c</columns>
    <columns>Transfer_to_PPS_Status__c</columns>
    <columns>Export_to_PPS_Timestamp__c</columns>
    <columns>Number_of_exported_MIDs__c</columns>
    <columns>Transfer_to_PPS_Response__c</columns>
    <columns>Status_Change_Date__c</columns>
    <columns>ERAT_StatusChangedBy__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>